# CPP-ND

./: GitCmd.txt  GitHubDesktop.txt  README.md
Foundations/Examples/ReadBoardFile/: 1.board  ReadBoardFile.cpp
Foundations/Examples/conditionsLoops/: conditionsLoops.cpp
Foundations/Examples/oopCars/: car.cpp  car.h  main.cpp
Foundations/Examples/phoneCode/: phoneCode.cpp
Foundations/Examples/printBoard/: printBoard.cpp
Foundations/Examples/printV/: printV.cpp  readme.md
Foundations/Examples/shortestPath/: shortestPath.cpp
Foundations/Examples/sumVect/: sumVect.cpp
OOP/Examples/: Pyramids.cpp
OOP/Notes/: oopConcepts.txt
Threads/: Notes2.txt  notes.txt
Threads/Examples/Lamdas/: Notes.txt
Threads/Examples/anonymosObject/: example.cpp  example2.cpp  source.txt
career/gitHub/: notes.txt
memoryManagement/: Notes.txt  question.txt
memoryManagement/L&RValues/: Notes.txt  l_value_references.cpp  l_value_references_2.cpp  r_value_references.cpp  r_value_references_2.cpp
memoryManagement/copyConstructor/: example1.cpp  example2.cpp  notes1.txt
memoryManagement/copySematics/: RAII.txt  Rule of Three.txt  copying.txt  rule_of_five.cpp
memoryManagement/smartPointers/: smartPointers.txt
projects/CppND-Route-Planning-Project/: ELZENARYREADME.txt
projects/CppND-System-Monitor/: ReadMe2.md
projects/capstone/: CMakeLists.txt  readME.md  readMEElzenary.md
projects/capstone/src/: FSM.cpp  FSM.h  UserDB.cpp  UserDB.h  UserLogin.cpp  UserLogin.h  UserRegister.cpp  UserRegister.h  authdb.data  bankOperations.cpp  bankOperations.h  main.cpp
(+40 files in other folders)
